Tried to fix padding and added another vis

--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,12 @@
 header {
     text-align: center;
-    padding: 20px; /* Add padding for better visual appearance */
-    background-color: #f0f0f0; /* Add background color if needed */
+    padding: 5px; 
+    background-color: #f0f0f0; 
 }
 
 header img {
-    max-width: 100%; /* Make sure the image doesn't exceed its container */
-    height: auto; /* Maintain the aspect ratio of the image */
+    max-width: 60%; 
+    height: auto; 
 }
 
 body {
@@ -30,7 +30,8 @@ p {
     font-family: 'Open Sans', sans-serif;
     color: #333;
     padding: 30px;
-    margin-bottom: 20px;
+    align-content: center;
+    margin-bottom: 10px;
 }
 
 /* Subtitle styling using Lato */
