--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ header {
 }
 
 header img {
-    max-width: 60%; 
+    max-width: 90%; 
     height: auto; 
 }
 
@@ -17,21 +17,20 @@ body {
 h1 {
     font-family: 'Franklin Gothic Demi', sans-serif;
     color: #333;
-    padding: 30px;
+    padding: 10px;
 }
 
 h2 {
     font-family: 'Franklin Gothic Demi', sans-serif;
     color: #333;
-    padding: 30px;
+    padding: 10px;
 }
 
 p {
     font-family: 'Open Sans', sans-serif;
     color: #333;
-    padding: 30px;
+    padding: 10px;
     align-content: center;
-    margin-bottom: 10px;
     text-align: justify; 
 }
 
@@ -39,15 +38,17 @@ p {
 section h2 {
     font-family: 'Lato', sans-serif;
     color: #333;
-    padding: 30px;
+    padding: 10px;
 }
 
 .page {
     width: 750px;
     background-color: white;
     margin: auto;
-    padding: 70px;
-    padding-top: 35px;
+    padding: 20px;
+    padding-top: 5px;
+    background-color: #f0f0f0; 
+    
 }
 
 .vis-container {
@@ -55,14 +56,8 @@ section h2 {
 }
 
 .pure-g {
-    margin-bottom: 25px;
+    margin-bottom: 5px;
 }
 
-.description-right {
-    padding-left: 15px;
-}
 
-.description-left {
-    padding-right: 15px;
-}
 
