--- a/styles.css
+++ b/styles.css
@@ -18,13 +18,15 @@ body {
 h1 {
     font-family: 'Franklin Gothic Demi', sans-serif;
     color: #333;
-    padding: 10px;
 }
 
 h2 {
     font-family: 'Franklin Gothic Demi', sans-serif;
     color: #333;
-    padding: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 p {
@@ -33,13 +35,6 @@ p {
     padding: 10px;
     align-content: center;
     text-align: justify; 
-}
-
-/* Subtitle styling using Lato */
-section h2 {
-    font-family: 'Lato', sans-serif;
-    color: #333;
-    padding: 10px;
 }
 
 .page {
@@ -57,13 +52,13 @@ section h2 {
 }
 
 .pure-g {
-    margin-bottom: 5px;
+    margin-bottom: 2px;
 }
 
 .center-container {
     margin: 0 auto; /* Center the div horizontally */
     border: 1px;
-    padding: 10px;
+
   }
 
 
